# ConwayGameOfLife

./: CMakeLists.txt  README.md
src/: grid.c  grid.h  main.c  mouse_state.h  render.c  render.h  rules.c  rules.h  shape_editor.c  shape_editor.h  ui_menu.c  ui_menu.h
